2017-01-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* EcAlarmSinkSNMP.m (pollHeartBeat_handler): Don't use memdup,
	which is replaced by netsnmp_memdup with a different interface in
	net-snmp 5.7.3.

2016-07-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* EcConsole.m (-ecRun): Pass distantFuture to -runMode:beforeDate:
	to prevent returning immediately from the run loop after recent
	gnustep-base changes.

2016-06-09  Richard Frith-Macdonald <rfm@gnu.org>

	* EcControl.m: Fix bug where alerter config was not always updated
	when changed, and where Control server defaults were lost during
	alerter updates.

2016-05-18  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: When changing log files on a nightly basis, don't
	close descriptor 2 (stderr).  Instead open the new log and use
	dup2() to switch the new log to be stderr.  Wolfgang spotted that
	the existing code allowed another thread to ned up using the
	descriptor if it opened a device in the gap between the old log
	file being closed and the new one opened.

2016-01-21  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarm.h:
	* EcAlarm.m:
        * EcAlarmDestination.m: When coalescing alarms, allow a clear and
	alarm to cancel each other out, but only if the alarm is not yet
	active (only queued). Allow alarms to be set to persist in the queue
	for up to 255 seconds to allow more coalescing.
	This lets us raise an alarm which, if cleared within the delay
	period, will never be forwarded anywhere.

2015-11-18  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Improve output when changing/reading defaults, and
	restore tolerant behavior of doing a read by default.
	* ECAlerter.h: 
	* ECAlerter.m: Remove obsolete methods, and a 'Quiet' configuration
	option, and log alarms (and their disposition) by default.

2015-11-18 	Niels Grewe <niels.grewe@halbordnung.de>

	* EcProcess.m: Fix argument validation when reading/writing defaults.

2015-10-28 	Niels Grewe <niels.grewe@halbordnung.de>
